--- a/src/components/TopBarSearch.css
+++ b/src/components/TopBarSearch.css
@@ -5,7 +5,7 @@
 
 .TopBar-searchBar input {
     padding: 10px 20px;
-    width: 24em;
+    width: 22em;
     border-radius: 3px;
     border: 1px solid #9330FF;
     background: #ffffff;
